// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`math CEILING(6, -0.2) - error: if value positive, factor can't be negative 1`] = `
"
        Function CEILING expects the parameter 'factor'
        to be positive when parameter 'value' is positive.
        Change 'factor' from [-0.2] to a positive
        value."
`;

exports[`math CEILING(7.89, -0.2) - error: if value positive, factor can't be negative 1`] = `
"
        Function CEILING expects the parameter 'factor'
        to be positive when parameter 'value' is positive.
        Change 'factor' from [-0.2] to a positive
        value."
`;

exports[`math DECIMAL(@ABAB, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(@ABAB, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(@ABAB, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(@ABAB, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(@ABAB, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [@ABAB] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(@ABAB, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [@ABAB] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(@ABAB, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [@ABAB] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(@ABAB, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [@ABAB] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(@ABAB, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [@ABAB] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(@ABAB, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [@ABAB] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(@ABAB, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(-, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [-] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(-, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [-] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(-, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [-] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(-, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [-] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(-, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [-] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(-, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [-] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(-, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(-0.1, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-0.1, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-0.1, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-0.1, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-0.1, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [-0.1] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(-0.1, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [-0.1] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(-0.1, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [-0.1] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(-0.1, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [-0.1] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(-0.1, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [-0.1] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(-0.1, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [-0.1] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(-0.1, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(-1010, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-1010, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-1010, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-1010, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-1010, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(-ABAB, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-ABAB, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-ABAB, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(-ABAB, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(-ABAB, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [-ABAB] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(-ABAB, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [-ABAB] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(-ABAB, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [-ABAB] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(-ABAB, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [-ABAB] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(-ABAB, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, false) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, null) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(0, true) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(0.1, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(0.1, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(0.1, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(0.1, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(0.1, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [0.1] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(0.1, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [0.1] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(0.1, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [0.1] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(0.1, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [0.1] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(0.1, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [0.1] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(0.1, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [0.1] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(0.1, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(2, false) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(2, null) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(2, true) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(1010, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(1010, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(1010, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(1010, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(1010, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(1111, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(1111, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(1111, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(1111, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(1111, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(2020, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(2020, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(2020, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(2020, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(2020, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [2020] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(2020, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(3030, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(3030, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(3030, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(3030, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(3030, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [3030] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(3030, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [3030] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(3030, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(A-, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(A-, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(A-, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(A-, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(A-, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [A-] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(A-, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [A-] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(A-, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [A-] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(A-, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [A-] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(A-, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [A-] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(A-, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [A-] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(A-, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(A1A1, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(A1A1, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(A1A1, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(A1A1, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(A1A1, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [A1A1] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(A1A1, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [A1A1] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(A1A1, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [A1A1] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(A1A1, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [A1A1] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(A1A1, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(AB AB, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(AB AB, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(AB AB, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(AB AB, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(AB AB, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [AB AB] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(AB AB, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [AB AB] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(AB AB, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [AB AB] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(AB AB, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [AB AB] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(AB AB, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [AB AB] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(AB AB, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [AB AB] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(AB AB, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [ABAB] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(ABAB, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [ABAB] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(ABAB, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [ABAB] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(ABAB, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [ABAB] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(ABAB, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.2, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.2, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.2, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.2, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.2, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [ABAB.2] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(ABAB.2, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [ABAB.2] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(ABAB.2, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [ABAB.2] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(ABAB.2, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [ABAB.2] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(ABAB.2, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [ABAB.2] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(ABAB.2, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [ABAB.2] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(ABAB.2, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.21@, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.21@, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.21@, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.21@, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB.21@, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [ABAB.21@] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(ABAB.21@, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [ABAB.21@] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(ABAB.21@, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [ABAB.21@] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(ABAB.21@, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [ABAB.21@] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(ABAB.21@, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [ABAB.21@] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(ABAB.21@, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [ABAB.21@] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(ABAB.21@, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB@, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB@, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB@, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB@, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ABAB@, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [ABAB@] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(ABAB@, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [ABAB@] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(ABAB@, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [ABAB@] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(ABAB@, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [ABAB@] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(ABAB@, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [ABAB@] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(ABAB@, 36) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 36 representation. Change 'value' 
      from [ABAB@] to a valid base 36 representation.
    "
`;

exports[`math DECIMAL(ABAB@, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(ZZZZ, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ZZZZ, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ZZZZ, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(ZZZZ, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(ZZZZ, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [ZZZZ] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(ZZZZ, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [ZZZZ] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(ZZZZ, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [ZZZZ] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(ZZZZ, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [ZZZZ] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(ZZZZ, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [ZZZZ] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(ZZZZ, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(a1a1, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(a1a1, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(a1a1, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(a1a1, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(a1a1, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [a1a1] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(a1a1, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [a1a1] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(a1a1, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [a1a1] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(a1a1, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [a1a1] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(a1a1, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math DECIMAL(false, 0) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(false, 2) - error : take 2 parameter(s), return error on parameter 1, casting test 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [FALSE] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(false, null) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(null, 0) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(null, false) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(null, true) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(true, 0) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(true, 2) - error : take 2 parameter(s), return error on parameter 1, casting test 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [TRUE] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(true, null) - error: take 2 parameter(s), return error on parameter 2, casting test 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(zzzz, -1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [-1] to a value between 2 and 36."
`;

exports[`math DECIMAL(zzzz, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(zzzz, 0.1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [0] to a value between 2 and 36."
`;

exports[`math DECIMAL(zzzz, 1) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [1] to a value between 2 and 36."
`;

exports[`math DECIMAL(zzzz, 2) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 2 representation. Change 'value' 
      from [zzzz] to a valid base 2 representation.
    "
`;

exports[`math DECIMAL(zzzz, 3) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 3 representation. Change 'value' 
      from [zzzz] to a valid base 3 representation.
    "
`;

exports[`math DECIMAL(zzzz, 4) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 4 representation. Change 'value' 
      from [zzzz] to a valid base 4 representation.
    "
`;

exports[`math DECIMAL(zzzz, 10) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 10 representation. Change 'value' 
      from [zzzz] to a valid base 10 representation.
    "
`;

exports[`math DECIMAL(zzzz, 16) - error: take 2 parameter(s), return error on parameter 1 1`] = `
"
      Function DECIMAL expects the parameter 'value' 
      to be a valid base 16 representation. Change 'value' 
      from [zzzz] to a valid base 16 representation.
    "
`;

exports[`math DECIMAL(zzzz, 37) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
        Function DECIMAL expects the parameter 'base' 
        to be between 2 and 36 inclusive. Change 'base' 
        from [37] to a value between 2 and 36."
`;

exports[`math FLOOR(6, -0.2) - error: if value positive, factor can't be negative 1`] = `
"
        Function FLOOR expects the parameter 'factor'
        to be positive when parameter 'value' is positive.
        Change 'factor' from [-0.2] to a positive
        value."
`;

exports[`math FLOOR(7.89, -0.2) - error: if value positive, factor can't be negative 1`] = `
"
        Function FLOOR expects the parameter 'factor'
        to be positive when parameter 'value' is positive.
        Change 'factor' from [-0.2] to a positive
        value."
`;

exports[`math MOD(-2, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(-2.2, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(-42, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(0, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(2, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(2.2, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(42, 0) - error: take 2 parameter(s), return error on parameter 2 1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(42, false) - error: take 2 parameter(s), return error on parameter 2, casting test  1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math MOD(42, null) - error: take 2 parameter(s), return error on parameter 2, casting test  1`] = `
"
          Function MOD expects the parameter 'divisor'
          to be different from 0. Change 'divisor' to 
          a value other than 0."
`;

exports[`math POWER(-4, 0.2) - error: take 2 parameter(s), return an error on parameter 2 1`] = `
"
          Function POWER expects the parameter 'exponent' 
          to be an integer when parameter 'base' is negative.
          Change 'exponent' 
          from [0.2] to an integer value."
`;

exports[`math POWER(-4, 0.5) - error: take 2 parameter(s), return an error on parameter 2 1`] = `
"
          Function POWER expects the parameter 'exponent' 
          to be an integer when parameter 'base' is negative.
          Change 'exponent' 
          from [0.5] to an integer value."
`;

exports[`math POWER(-4, 1.5) - error: take 2 parameter(s), return an error on parameter 2 1`] = `
"
          Function POWER expects the parameter 'exponent' 
          to be an integer when parameter 'base' is negative.
          Change 'exponent' 
          from [1.5] to an integer value."
`;

exports[`math RANDBETWEEN(-24, -42) - error: take 2 parameter(s), return an error 1`] = `
"
          Function RANDBETWEEN parameter 'high' value 
          is -42. It should be greater than or equal to [-24]."
`;

exports[`math RANDBETWEEN(1.1, 1.2) - error: take 2 parameter(s), return an error 1`] = `
"
          Function RANDBETWEEN parameter 'high' value 
          is 1. It should be greater than or equal to [2]."
`;

exports[`math RANDBETWEEN(42, 24) - error: take 2 parameter(s), return an error 1`] = `
"
          Function RANDBETWEEN parameter 'high' value 
          is 24. It should be greater than or equal to [42]."
`;

exports[`math SQRT(-4) - error: take 1 parameter(s), return an error  1`] = `
"
          Function SQRT parameter 'value' value is negative. 
          It should be positive or zero. Change 'value' 
          from [-4] to a positive value."
`;

exports[`math SQRT(-9) - error: take 1 parameter(s), return an error  1`] = `
"
          Function SQRT parameter 'value' value is negative. 
          It should be positive or zero. Change 'value' 
          from [-9] to a positive value."
`;
